--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -1,6 +1,7 @@
 
 indexer
 {
+  mem_limit = 28M
 }
 
 searchd
@@ -13,6 +14,56 @@ searchd
   binlog_path = /home/anton/work/hope/tmp/binlog/development
 }
 
+source comment_core_0
+{
+  type = mysql
+  sql_host = localhost
+  sql_user = root
+  sql_pass = 123
+  sql_db = hope_development
+  sql_sock = /var/run/mysqld/mysqld.sock
+  sql_query_pre = SET TIME_ZONE = '+0:00'
+  sql_query_pre = SET NAMES utf8
+  sql_query = SELECT SQL_NO_CACHE `comments`.`id` * 6 + 0 AS `id`, `comments`.`message` AS `message`, `comments`.`id` AS `sphinx_internal_id`, 'Comment' AS `sphinx_internal_class`, 0 AS `sphinx_deleted` FROM `comments` WHERE (`comments`.`id` BETWEEN $start AND $end) GROUP BY `comments`.`id`, `comments`.`message`, `comments`.`id`  ORDER BY NULL
+  sql_query_range = SELECT IFNULL(MIN(`comments`.`id`), 1), IFNULL(MAX(`comments`.`id`), 1) FROM `comments`
+  sql_attr_uint = sphinx_internal_id
+  sql_attr_uint = sphinx_deleted
+  sql_attr_string = sphinx_internal_class
+}
+
+index comment_core
+{
+  type = plain
+  path = /home/anton/work/hope/db/sphinx/development/comment_core
+  docinfo = extern
+  source = comment_core_0
+}
+
+source tag_core_0
+{
+  type = mysql
+  sql_host = localhost
+  sql_user = root
+  sql_pass = 123
+  sql_db = hope_development
+  sql_sock = /var/run/mysqld/mysqld.sock
+  sql_query_pre = SET TIME_ZONE = '+0:00'
+  sql_query_pre = SET NAMES utf8
+  sql_query = SELECT SQL_NO_CACHE `tags`.`id` * 6 + 1 AS `id`, `tags`.`name` AS `name`, `tags`.`id` AS `sphinx_internal_id`, 'Tag' AS `sphinx_internal_class`, 0 AS `sphinx_deleted` FROM `tags` WHERE (`tags`.`id` BETWEEN $start AND $end) GROUP BY `tags`.`id`, `tags`.`name`, `tags`.`id`  ORDER BY NULL
+  sql_query_range = SELECT IFNULL(MIN(`tags`.`id`), 1), IFNULL(MAX(`tags`.`id`), 1) FROM `tags`
+  sql_attr_uint = sphinx_internal_id
+  sql_attr_uint = sphinx_deleted
+  sql_attr_string = sphinx_internal_class
+}
+
+index tag_core
+{
+  type = plain
+  path = /home/anton/work/hope/db/sphinx/development/tag_core
+  docinfo = extern
+  source = tag_core_0
+}
+
 source task_core_0
 {
   type = mysql
@@ -23,7 +74,7 @@ source task_core_0
   sql_sock = /var/run/mysqld/mysqld.sock
   sql_query_pre = SET TIME_ZONE = '+0:00'
   sql_query_pre = SET NAMES utf8
-  sql_query = SELECT SQL_NO_CACHE `tasks`.`id` * 4 + 0 AS `id`, `tasks`.`title` AS `title`, `tasks`.`description` AS `description`, `tasks`.`id` AS `sphinx_internal_id`, 'Task' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, `tasks`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`tasks`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`tasks`.`updated_at`) AS `updated_at` FROM `tasks` WHERE (`tasks`.`id` BETWEEN $start AND $end) GROUP BY `tasks`.`id`, `tasks`.`title`, `tasks`.`description`, `tasks`.`id`, `tasks`.`user_id`, `tasks`.`created_at`, `tasks`.`updated_at`  ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `tasks`.`id` * 6 + 2 AS `id`, `tasks`.`title` AS `title`, `tasks`.`description` AS `description`, `tasks`.`id` AS `sphinx_internal_id`, 'Task' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, `tasks`.`user_id` AS `user_id`, UNIX_TIMESTAMP(`tasks`.`created_at`) AS `created_at`, UNIX_TIMESTAMP(`tasks`.`updated_at`) AS `updated_at` FROM `tasks` WHERE (`tasks`.`id` BETWEEN $start AND $end) GROUP BY `tasks`.`id`, `tasks`.`title`, `tasks`.`description`, `tasks`.`id`, `tasks`.`user_id`, `tasks`.`created_at`, `tasks`.`updated_at`  ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`tasks`.`id`), 1), IFNULL(MAX(`tasks`.`id`), 1) FROM `tasks`
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -42,39 +93,20 @@ index task_core
   source = task_core_0
 }
 
-source comment_core_0
+index comment
 {
-  type = mysql
-  sql_host = localhost
-  sql_user = root
-  sql_pass = 123
-  sql_db = hope_development
-  sql_sock = /var/run/mysqld/mysqld.sock
-  sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query_pre = SET NAMES utf8
-  sql_query = SELECT SQL_NO_CACHE `comments`.`id` * 4 + 1 AS `id`, `comments`.`message` AS `message`, `comments`.`id` AS `sphinx_internal_id`, 'Comment' AS `sphinx_internal_class`, 0 AS `sphinx_deleted` FROM `comments` WHERE (`comments`.`id` BETWEEN $start AND $end) GROUP BY `comments`.`id`, `comments`.`message`, `comments`.`id`  ORDER BY NULL
-  sql_query_range = SELECT IFNULL(MIN(`comments`.`id`), 1), IFNULL(MAX(`comments`.`id`), 1) FROM `comments`
-  sql_attr_uint = sphinx_internal_id
-  sql_attr_uint = sphinx_deleted
-  sql_attr_string = sphinx_internal_class
+  type = distributed
+  local = comment_core
 }
 
-index comment_core
+index tag
 {
-  type = plain
-  path = /home/anton/work/hope/db/sphinx/development/comment_core
-  docinfo = extern
-  source = comment_core_0
+  type = distributed
+  local = tag_core
 }
 
 index task
 {
   type = distributed
   local = task_core
-}
-
-index comment
-{
-  type = distributed
-  local = comment_core
 }
